# firrtl

./: .gitignore  .jvmopts  .mergify.yml  .run_chisel_tests.sh  .run_formal_checks.sh  .scalafmt.conf  .scalafmt.config  .travis.yml  BuildInfo.sc  LICENSE.SiFive  Makefile  Protobuf.sc  README.md  build.sbt  build.sc  here.wake  process.py  rundocker.sh  sbt  test.anno.json  test.fir
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
benchmark/scripts/: benchmark_cold_compile.py  benchmark_hot_serialize.py  benchmark_plot.py  benchmark_stats.py  common.py  find_heap_bound.py
project/: assembly.sbt  format.sbt  plugins.sbt  protoc.sbt  sbt-antlr4.sbt
project/chiselBuild/: ChiselDependencies.scala
regress/: GCD.fir  ICache.fir
scalafix/: build.sbt  readme.md
scripts/: formal_equiv.sh
spec/: Makefile  firrtl.xml  spec.md  spec.tex
src/main/antlr4/: FIRRTL.g4
src/main/eta/: LICENSE  transforms.cabal
src/main/eta/Lib/: FIRRTL.hs  Scala.hs
src/main/eta/Transform/: AnalyzeCircuit.hs
src/main/proto/: firrtl.proto
src/main/protobuf/: Named.proto  annotations.proto
src/main/resources/: logback.xml
src/main/scala-2.11/: DuplicateHandling.scala  compat.scala
src/main/scala-2.12/: compat.scala
src/main/scala-2.13/: DuplicateHandling.scala  compat.scala
src/test/resources/: top.cpp
test/features/: RightShift.fir  SIntWidth.fir
test/integration/: MemTester.fir  PipeTester.fir
test/parser/: dshl.fir  invalids.fir  mux.fir  node.fir
test/passes/expand-whens/: reg-and-when.fir
(+842 files in other folders)
