name:          transforms
version:       0.1.0.0
synopsis:      Compiler transforms written using Eta
license:       MIT
license-file:  LICENSE
author:        John Wiegley
maintainer:    john.wiegley@baesystems.com
copyright:     Copyright (c) 2018, BAE Systems
build-type:    Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  exposed-modules:
    Transform.AnalyzeCircuit
  other-modules:
    Lib.Scala
    Lib.FIRRTL
  build-depends:
      base >=4.8 && <4.9
    , containers
    , transformers
